Change home partial, controller and tests

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,13 +1,7 @@
-<div class="container mainContent" ng-controller="TestCtrl as vm">
-    <h1>{{vm.introTitle}}</h1>
+<div class="container mainContent">
+    <h1>{{introTitle}}</h1>
     <p class="lead">
-        {{vm.subHeaderText}}
+        {{subHeaderText}}
     </p>
-    <h4>Random Messages</h4>
-    <ul>
-        <li ng-repeat="post in vm.list">
-            <strong>{{post.from}} said:</strong>
-            {{post.message}}
-        </li>
-    </ul>
+
 </div>
