Add more unit tests experiment with stuff

--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -36,7 +36,7 @@
                 class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
-                placeholder="{{emailPlaceHolder}}"
+                placeholder="{{emailPlaceholder}}"
                 required="true"
                 ng-model="settings.email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
