--- a/public/partials/interactive.html
+++ b/public/partials/interactive.html
@@ -31,13 +31,12 @@
     <p>
         <ul class="usersList" ng-repeat="user in users">
             <li style="margin-top:{{user.y}}px; margin-left:{{user.x}}px">
-                <button type="button" class="btn btn-primary" name="button">
-                    {{user.name}}
-                    <br>
-                    {{user.id}}
-                    <!-- <span class="name">{{user.name}}</span>
-                    <span class="socket">{{user.id}}</span> -->
-                </button>
+                <div class="well">
+                    <strong>{{user.name}}</strong>
+                    <p><small>{{user.id}}</small></p>
+                    <button type="button" class="btn btn-success btn-xs">Send a Message</button>
+                </div>
+
             </li>
         </ul>
     </p>
