--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -50,24 +50,5 @@
     </form>
 </div>
 
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Save Changes</h4>
-      </div>
-      <div class="modal-body">
-        Are you sure you wish to change your settings?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click="saveChanges()">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- include dialog template -->
+<ng-include src="'/partials/settings.modal.tpl.html'"></ng-include>
