Fix messages that were not working in interactive tab.
Add a reply button to messages in the tab and display something for items with no message

--- a/public/partials/interactive.html
+++ b/public/partials/interactive.html
@@ -37,8 +37,10 @@
                     <button
                         type="button"
                         class="btn btn-success btn-xs"
-                        ng-click="sendMessage()"
-                        ng-if="user.id != clientId">Send a Message</button>
+                        ng-click="sendMessage(user.id)"
+                        ng-if="user.id != clientId">
+                        Send a Message
+                    </button>
                 </div>
             </li>
         </ul>
